added books/albums to works view

--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -1,1 +1,83 @@
+<body>
+  <main>
+    <h2>List of Works</h2>
 
+  <section class="media-table">
+    <h4>Albums</h4>
+    <table class="table">
+      <thead>
+        <tr>
+          <%# <th width="80">Votes</th> %>
+          <th>Title</th>
+          <th>Created By</th>
+          <th width="100">Published</th>
+          <th width="100">Upvote</th>
+        </tr>
+      </thead>
+      <tbody>
+            <%# <td>3</td> %>
+            <% @albums.each do |album| %>
+          <tr>
+            <td><%= album.title %></td>
+            <td><%= album.creator %></td>
+            <td><%= album.publication_year%></td>
+            <%# <td><a class="btn btn-primary" rel="nofollow" data-method="post" href="/works/476/upvote">Upvote</a></td> %>
+          </tr>
+          <%end%>
+      </tbody>
+    </table>
+  </section>
+  <section class="media-table">
+    <h4>Books</h4>
+    <table class="table">
+      <thead>
+        <tr>
+          <%# <th width="80">Votes</th> %>
+          <th>Title</th>
+          <th>Created By</th>
+          <th width="100">Published</th>
+          <th width="100">Upvote</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @books.each do |book| %>
+      <tr>
+      <td><%= book.title %></td>
+      <td><%= book.creator %></td>
+      <td><%= book.publication_year%></td>
+      </tr>
+      <%end%>
+      </tbody>
+    </table>
+  </section>
+  <section class="media-table">
+    <h4>Movies</h4>
+    <table class="table">
+      <thead>
+        <tr>
+          <th width="80">Votes</th>
+          <th>Title</th>
+          <th>Created By</th>
+          <th width="100">Published</th>
+          <th width="100">Upvote</th>
+        </tr>
+      </thead>
+      <tbody>
+          <tr>
+            <td>1</td>
+            <td><a href="/works/506">Princess Sparklepants</a></td>
+            <td></td>
+            <td></td>
+            <td><a class="btn btn-primary" rel="nofollow" data-method="post" href="/works/506/upvote">Upvote</a></td>
+          </tr>
+      </tbody>
+    </table>
+  </section>
+
+<a class="btn btn-secondary" href="/">View top media</a>
+<a class="btn btn-primary" href="/works/new">Add a new work</a>
+
+  </main>
+
+
+</body>
