--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,39 @@
   </head>
 
   <body>
+  <header class="app-header__header">
+    <h1>
+      <a href="/">Awesome Media Ranker</a>
+      <small>Ranking the Best of Everything</small>
+    </h1>
+
+    <nav class="app-header__nav">
+      <ul class="nav app-header__site-nav-container">
+        <li class="nav-item app-header__nav_item">
+          <%= link_to "View Top Media", root_path, class:"nav-link"%>
+        </li>
+        <li class="nav-item app-header__nav_item">
+          <%= link_to "View All Media", works_path, class:"nav-link"%>
+        </li>
+        <li class="nav-item app-header__nav_item">
+          <%= link_to "Add a new work", works_path, class: "nav-link"%>
+        </li>
+        <li class="nav-item app-header__nav_item">
+          <a class="nav-link" href="/users">View all users</a>
+        </li>
+      </ul>
+      <ul class="nav app-header__user-nav-container">
+
+        <li class="nav-item app-header__nav_item">
+          <a class="btn btn-primary" href="/users/316">Logged in as me</a>
+        </li>
+        <li class="nav-item app-header__nav_item">
+          <a class="btn btn-primary" rel="nofollow" data-method="post" href="/logout">Log Out</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
     <%= yield %>
   </body>
 </html>
