allow users to add and delete votes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           <%= link_to "View All Media", works_path, class:"nav-link"%>
         </li>
         <li class="nav-item app-header__nav_item">
-          <%= link_to "Add a new work", works_path, class: "nav-link"%>
+          <%= link_to "Add a new work", new_work_path, class: "nav-link"%>
         </li>
         <li class="nav-item app-header__nav_item">
           <a class="nav-link" href="/users">View all users</a>
