--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -1,6 +1,7 @@
-<main>
-    <h2>Add a new work</h2>
-<section>
+<body>
+  <main>
+  <h2>Create new work</h2>
+  <section>
   
   <form action="/works" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="M8d22PZXaHD5Dal9ceSUy/Y/HbIK76y9sW9g7/Z5TUF074+oCrj5Tr2Sb2tpznzyxFNhZEuGUITQ0rH4fyQSNw==">
     <div class="form-group">
@@ -31,9 +32,9 @@
     </div>
 
     <div class="form-group">
-      <input type="submit" name="commit" value="Create Work" class="btn btn-primary" data-disable-with="Create Work">
+      <input type="submit" name="commit" value="Create work" work="" class="btn btn-primary" data-disable-with="Create Work">
     </div>
-</form></section>
-
-
+    </form></section>
+  
   </main>
+</body>
