--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -18,7 +18,7 @@
           <%# <td>3</td> %>
           <% @albums.each do |album| %>
           <tr>
-            <td><%= album.title %></td>
+            <td><%= link_to album.title, work_path(album) %></td>
             <td><%= album.creator %></td>
             <td><%= album.publication_year%></td>
             <%# <td><a class="btn btn-primary" rel="nofollow" data-method="post" href="/works/476/upvote">Upvote</a></td> %>
@@ -44,7 +44,7 @@
           <%# <td>3</td> %>
           <% @books.each do |book| %>
           <tr>
-            <td><%= book.title %></td>
+            <td><%= link_to book.title, work_path(book) %></td>
             <td><%= book.creator %></td>
             <td><%= book.publication_year%></td>
           </tr>
@@ -69,7 +69,7 @@
           <%# <td>3</td> %>
           <% @movies.each do |movie| %>
           <tr>
-            <td><%= movie.title %></td>
+            <td><%= link_to movie.title, work_path(movie) %></td>
             <td><%= movie.creator %></td>
             <td><%= movie.publication_year%></td>
           </tr>
