--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -7,8 +7,8 @@
   <section>
     <a class="btn btn-primary" href="/">Back to media ranks</a>
     <a class="btn btn-primary" <%= link_to "Edit", edit_work_path(@work), method: :get %> 
-    <a class="btn btn-primary" rel="nofollow" data-method="post" href="/works/420/upvote">Upvote</a>
-    <a class="btn btn-danger" <%= link_to "Delete", work_path(@work), method: :delete, data: {confirm: "Are you sure?"} %>
+    <a class="btn btn-primary" <%= link_to "Upvote", work_votes_path(@work.id), method: :post %>
+    <a class="btn btn-danger" <%= link_to "Delete", work_path(@work.id), method: :delete, data: {confirm: "Are you sure?"} %>
   </section>
 </section>
 
