--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,20 +31,26 @@
           <%= link_to "View all users", users_path, class: "nav-link"%>
         </li>
       </ul>
+
       <ul class="nav app-header__user-nav-container">
         <% if session[:user_id].nil? %>
         <li class="nav-item app-header__nav_item">
-          <%= link_to "Login", login_path, :class=>"btn btn-primary"%>
+          <%= link_to "Login" , login_path, :class=>"btn btn-primary"%>
         </li>
+        
         <%else%>
         <li class="nav-item app-header__nav_item">
-          <%= link_to "Logout", logout_path, :class=>"btn btn-primary", method: :posts%>
+          <%= link_to "Logged in as #{User.find_by(id: session[:user_id]).name}", root_path, :class=>"btn btn-primary"%>
+        </li>
+
+        <li class="nav-item app-header__nav_item">
+          <%= link_to "Logout", logout_path, :class=>"btn btn-primary", method: :post%>
         </li>
         <%end%>
       </ul>
+    
     </nav>
     </header>
     <%= yield %>
   </body>
 </html>
-<%# Logged in as <%= User.find_by(id: session[:user_id]).username %>
