added logic for top10 and spotlight model and view

--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -3,10 +3,11 @@
       <section class="spotlight">
     <h2 class="spotlight__header">
       <span class="spotlight__header--prefix">Media Spotlight</span>
-      <a class="spotlight__link-to" href="/works/484">Le Petit Prince</a> by Antoine de Saint-Exupéry
+      <%= link_to @spotlight.title, works_path(@spotlight.id)%>
+      <small class="top-ten__creator">by <%=@spotlight.creator%></small>
     </h2>
     <p class="spotlight__description">
-      10 votes - We also wants you to buy everything!
+      <%=@spotlight.votes.count%> vote(s)
     </p>
   </section>
 
@@ -18,13 +19,15 @@
     Top Movies
   </h2>
   <ul class="list-group top-ten__list">
+    <% @movies.each do |movie| %>
       <li class="list-group-item">
         <h4>
-          <%= link_to @movies.first.title, works_path %>
-          <small class="top-ten__creator">by <%=@movies.first.creator%></small>
+          <%= link_to movie.title, work_path(movie.id) %>
+          <small class="top-ten__creator">by <%=movie.creator%></small>
         </h4>
-        <p>1 votes</p>
+        <p><%=movie.votes.count%> vote(s)</p>
       </li>
+      <%end%>
   </ul>
   <!-- <a href="/works.movies">View More Movies</a> -->
 </section>
@@ -33,14 +36,16 @@
   <h2 class="top-ten__header">
     Top Books
   </h2>
-  <ul>
+  <ul class="list-group top-ten__list">
+    <% @books.each do |book| %>
       <li class="list-group-item">
         <h4>
-          <%= link_to @books.first.title, works_path %>
-          <small class="top-ten__creator">by <%=@books.first.creator%></small>
+          <%= link_to book.title, works_path(book.id) %>
+          <small class="top-ten__creator">by <%=book.creator%></small>
         </h4>
-        <p>12 votes</p>
+        <p><%=book.votes.count%> vote(s)</p>
       </li>
+      <%end%>
   </ul>
   <!-- <a href="/works.books">View More Books</a> -->
 </section>
@@ -50,13 +55,15 @@
     Top Albums
   </h2>
   <ul class="list-group top-ten__list">
+    <% @albums.each do |album| %>
       <li class="list-group-item">
         <h4>
-          <%= link_to @albums.first.title, works_path %>
-          <small class="top-ten__creator">by <%=@albums.first.creator%></small>
+          <%= link_to album.title, works_path(album.id) %>
+          <small class="top-ten__creator">by <%=album.creator%></small>
         </h4>
-        <p>4 votes</p>
+        <p><%=album.votes.count%> vote(s)</p>
       </li>
+      <%end%>
   </ul>
   <!-- <a href="/works.albums">View More Albums</a> -->
   </section>
