--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
       <tr>
         <td><%= link_to user.name %></td>
         <td>1111</td>
-        <td>Apr 22, 2019</td>
+        <td><%= (user.created_at).to_date %></td>
       </tr>
       <%end%>    
   </tbody>
