--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -13,7 +13,7 @@
 </section>
 
 <section class="works-votes__container">
-  <h3 class="works-votes__header">12 Votes for this Album</h3>
+  <h3 class="works-votes__header">X Votes for this Album</h3>
   <table class="table">
     <thead>
       <tr>
@@ -23,7 +23,7 @@
     </thead>
     <tbody>
       <tr>
-        <td><a href="/users/316">meeeee</a></td>
+        <td><a href="/users/412">you</a></td>
         <td>Oct 17, 2019</td>
       
       </tr><tr>
