--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -1,9 +1,8 @@
-<body>
   <main>
-  <h2>Create new work</h2>
+  <h2><%=action_name%> work</h2>
   <section>
-  
-  <form action="/works" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="M8d22PZXaHD5Dal9ceSUy/Y/HbIK76y9sW9g7/Z5TUF074+oCrj5Tr2Sb2tpznzyxFNhZEuGUITQ0rH4fyQSNw==">
+    
+  <%= form_with model:@work do |f| %>
     <div class="form-group">
       <label>Category</label>
       <select class="form-control" name="work[category]"><option value="album">album</option>
@@ -13,28 +12,27 @@
 
     <div class="form-group">
       <label>Title</label>
-      <input class="form-control" type="text" name="work[title]">
+      <input class="form-control" type="text" name=<%=f.text_field :title%>
     </div>
 
     <div class="form-group">
       <label>Creator</label>
-      <input class="form-control" type="text" name="work[creator]">
+      <input class="form-control" type="text" name=<%=f.text_field :creator%>
     </div>
 
     <div class="form-group">
       <label>Publication year</label>
-      <input class="form-control" type="text" name="work[publication_year]">
+      <input class="form-control" type="text" name=<%=f.text_field :publication_year%>
     </div>
 
     <div class="form-group">
       <label>Description</label>
-      <textarea class="form-control" name="work[description]"></textarea>
+      <textarea class="form-control" name=<%=f.text_field :description%></textarea>
     </div>
 
     <div class="form-group">
-      <input type="submit" name="commit" value="Create work" work="" class="btn btn-primary" data-disable-with="Create Work">
+      <input type="submit" name="submit_button_label" value=<%=action_name%> work="" class="btn btn-primary">
     </div>
+    <%end%>
     </form></section>
-  
   </main>
-</body>
