ordered list of works on show view

--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -15,7 +15,8 @@
         </tr>
       </thead>
       <tbody>
-          <% @albums.each do |album| %>
+      <% @ordered_albums = @albums.sort_by {|album| album.votes.length} %>
+          <% @ordered_albums.reverse.each do |album| %>
           <tr>
             <td><%= album.votes.length %></td>
             <td><%= link_to album.title, work_path(album) %></td>
@@ -41,8 +42,8 @@
         </tr>
       </thead>
       <tbody>
-          
-          <% @books.each do |book| %>
+          <% @ordered_books = @books.sort_by {|book| book.votes.length} %>
+          <% @ordered_books.reverse.each do |book| %>
           <tr>
             <td><%= book.votes.length%></td>
             <td><%= link_to book.title, work_path(book) %></td>
@@ -68,7 +69,8 @@
         </tr>
       </thead>
       <tbody>
-          <% @movies.each do |movie| %>
+          <% @ordered_movies = @movies.sort_by {|movie| movie.votes.length} %>
+          <% @ordered_movies.reverse.each do |movie| %>
           <tr>
             <td><%= movie.votes.length%></td>
             <td><%= link_to movie.title, work_path(movie)%></td>
