--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -1,1 +1,1 @@
-<%=render partial: "form", locals: {action_name: "Create new", verb_name: "create"}%>
+<%=render partial: 'form', locals: {action_name: "Create new", verb_name: "create"}%>
