--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -1,8 +1,7 @@
   <main>
   <h2><%=action_name%> work</h2>
   <section>
-    
-  <%= form_with model:@work do |f| %>
+  <%= form_with model: @work do |f| %>
     <div class="form-group">
       <label>Category</label>
       <select class="form-control" name="work[category]"><option value="album">album</option>
@@ -31,8 +30,8 @@
     </div>
 
     <div class="form-group">
-      <input type="submit" name="submit_button_label" value=<%=action_name%> work="" class="btn btn-primary">
+      <%= f.submit "#{action_name}", class:"btn btn-primary" %>
     </div>
     <%end%>
-    </form></section>
+    </section>
   </main>
