--- a/app/views/works/edit.html.erb
+++ b/app/views/works/edit.html.erb
@@ -1,2 +1,2 @@
-<%=render(partial: "form", locals: {action_name: "Edit", verb_name: "update"})%>
+<%=render partial: 'form', locals: {action_name: "Edit", verb_name: "update"}%>
 
