--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <main>
-    <h2>User Summary: <a href="/users/285">yo</a></h2>
-<p>Joined site Apr 22, 2019</p>
+<h2>User Summary: <%=@user.name%></h2>
+<p>Joined site <%=@user.created_at.to_date%></p>
 
 <section class="user-votes__container">
   <h3 class="user-votes__header">Votes</h3>
@@ -15,18 +15,21 @@
       </tr>
     </thead>
     <tbody>
+        <%# <% if @user.votes.count > 0 %>
+        <% @user.votes.each do |vote| %>
         <tr>
-          <td><a href="/works/484">POODR: how to be a bike mechanic for Rubyists</a></td>
-          <td>Dr. Motorcycle</td>
-          <td>2012</td>
-          <td>Book</td>
-          <td>Oct 16, 2019</td>
+          <td><%= link_to vote.work.title, work_path(vote.work)%></td>
+          <td><%= vote.work.creator%></td>
+          <td><%= vote.work.publication_year%></td>
+          <td><%= vote.work.category%></td>
+          <td><%= (vote.created_at).to_date%></td>
         </tr>
+        <%end%>
+      <%# <%end%>
     </tbody>
   </table>
 </section>
 
 <a class="btn btn-secondary" href="/users">See all Users</a>
 <a class="btn btn-primary" href="/">Back to Media List</a>
-
-  </main>
+</main>
