--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -1,5 +1,6 @@
-  <main>
+<main>
   <h2><%=action_name%> work</h2>
+  
   <section>
   <%= form_with model: @work do |f| %>
     <div class="form-group">
@@ -11,27 +12,28 @@
 
     <div class="form-group">
       <label>Title</label>
-      <input class="form-control" type="text" name=<%=f.text_field :title%>
+      <%=f.text_field :title, class:"form-control"%>
     </div>
 
     <div class="form-group">
       <label>Creator</label>
-      <input class="form-control" type="text" name=<%=f.text_field :creator%>
+      <%=f.text_field :creator, class:"form-control"%>
     </div>
 
     <div class="form-group">
       <label>Publication year</label>
-      <input class="form-control" type="text" name=<%=f.text_field :publication_year%>
+      <%=f.text_field :publication_year, class:"form-control"%>
     </div>
 
     <div class="form-group">
       <label>Description</label>
-      <textarea class="form-control" name=<%=f.text_field :description%></textarea>
+      <%=f.text_field :description, class:"form-control"%>
     </div>
 
     <div class="form-group">
       <%= f.submit "#{action_name}", class:"btn btn-primary" %>
     </div>
     <%end%>
-    </section>
-  </main>
+  
+  </section>
+</main>
