updating style/checking small bug on users show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
   <header class="app-header__header">
     <h1>
-      <a href="/">Awesome Media Ranker</a>
+      <a href="/">Awesome Fall Media Ranker</a>
       <small>Ranking the Best of Everything</small>
     </h1>
 
